if (EC_INIT_DONE LESS 2)
    include(CTest)
    add_custom_target(check COMMAND CTEST_OUTPUT_ON_FAILURE=true ${CMAKE_CTEST_COMMAND})

    if(BUILD_TESTING)
        if ("$ENV{ECCI_DATA_DIR}" STREQUAL "")
            message(FATAL_ERROR "The ECCI_DATA_DIR environment variable isn't defined!\nTests won't be able to find the required data files.\nPlease define that variable or set BUILD_TESTING=NO.")
        endif()

        add_executable(TestF90 EXCLUDE_FROM_ALL test.F90)
        add_dependencies(check TestF90)
        target_link_libraries(TestF90 georef-shared rmn::rmn m)

        add_test(NAME TestF90 COMMAND TestF90 $ENV{ECCI_DATA_DIR}/georef/grids/L.fstd $ENV{ECCI_DATA_DIR}/georef/grids/PS.fstd)

        file(REMOVE libgeoref.fstd)

        add_test(NAME GridInterp_L2L   COMMAND $<TARGET_FILE:georef_interp> -g $ENV{ECCI_DATA_DIR}/georef/grids/L.fstd -i $ENV{ECCI_DATA_DIR}/georef/grids/L.fstd -o ./georef.fstd -n GRID -e L2L -v DEBUG)
        add_test(NAME GridInterp_PS2L  COMMAND $<TARGET_FILE:georef_interp>  -g $ENV{ECCI_DATA_DIR}/georef/grids/L.fstd -i $ENV{ECCI_DATA_DIR}/georef/grids/PS.fstd -o ./georef.fstd -n GRID -e PS2L -v DEBUG)
        add_test(NAME GridInterp_PSN2L COMMAND $<TARGET_FILE:georef_interp>  -g $ENV{ECCI_DATA_DIR}/georef/grids/L.fstd -i $ENV{ECCI_DATA_DIR}/georef/grids/PSN.fstd -o ./georef.fstd -n GRID -e PSN2L -v DEBUG)
        add_test(NAME GridInterp_PSS2L COMMAND $<TARGET_FILE:georef_interp>  -g $ENV{ECCI_DATA_DIR}/georef/grids/L.fstd -i $ENV{ECCI_DATA_DIR}/georef/grids/PSS.fstd -o ./georef.fstd -n GRID -e PSS2L -v DEBUG)
        add_test(NAME GridInterp_ZE2L  COMMAND $<TARGET_FILE:georef_interp>  -g $ENV{ECCI_DATA_DIR}/georef/grids/L.fstd -i $ENV{ECCI_DATA_DIR}/georef/grids/ZE.fstd -o ./georef.fstd -n GRID -e ZE2L -v DEBUG)
        add_test(NAME GridInterp_ZL2L  COMMAND $<TARGET_FILE:georef_interp>  -g $ENV{ECCI_DATA_DIR}/georef/grids/L.fstd -i $ENV{ECCI_DATA_DIR}/georef/grids/ZL.fstd -o ./georef.fstd -n GRID -e ZL2L -v DEBUG)
        add_test(NAME GridInterp_O2L   COMMAND $<TARGET_FILE:georef_interp>  -g $ENV{ECCI_DATA_DIR}/georef/grids/L.fstd -i $ENV{ECCI_DATA_DIR}/georef/grids/O.fstd -o ./georef.fstd -n GRID -e O2L -v DEBUG)
        add_test(NAME GridInterp_M2L   COMMAND $<TARGET_FILE:georef_interp>  -g $ENV{ECCI_DATA_DIR}/georef/grids/L.fstd -i $ENV{ECCI_DATA_DIR}/georef/grids/M.fstd -o ./georef.fstd -n GRID -e M2L -v DEBUG)

        add_test(NAME GridInterp_L2PS  COMMAND $<TARGET_FILE:georef_interp>  -g $ENV{ECCI_DATA_DIR}/georef/grids/PS.fstd -i $ENV{ECCI_DATA_DIR}/georef/grids/L.fstd -o ./georef.fstd -n GRID -e L2PS -v DEBUG)
        add_test(NAME GridInterp_L2PSN COMMAND $<TARGET_FILE:georef_interp>  -g $ENV{ECCI_DATA_DIR}/georef/grids/PSN.fstd -i $ENV{ECCI_DATA_DIR}/georef/grids/L.fstd -o ./georef.fstd -n GRID -e L2PSN -v DEBUG)
        add_test(NAME GridInterp_L2PSS COMMAND $<TARGET_FILE:georef_interp>  -g $ENV{ECCI_DATA_DIR}/georef/grids/PSS.fstd -i $ENV{ECCI_DATA_DIR}/georef/grids/L.fstd -o ./georef.fstd -n GRID -e L2PSS -v DEBUG)
        add_test(NAME GridInterp_L2ZE  COMMAND $<TARGET_FILE:georef_interp>  -g $ENV{ECCI_DATA_DIR}/georef/grids/ZE.fstd -i $ENV{ECCI_DATA_DIR}/georef/grids/L.fstd -o ./georef.fstd -n GRID -e L2ZE -v DEBUG)
        add_test(NAME GridInterp_L2ZL  COMMAND $<TARGET_FILE:georef_interp>  -g $ENV{ECCI_DATA_DIR}/georef/grids/ZL.fstd -i $ENV{ECCI_DATA_DIR}/georef/grids/L.fstd -o ./georef.fstd -n GRID -e L2ZL -v DEBUG)
        add_test(NAME GridInterp_L2O   COMMAND $<TARGET_FILE:georef_interp>  -g $ENV{ECCI_DATA_DIR}/georef/grids/O.fstd -i $ENV{ECCI_DATA_DIR}/georef/grids/L.fstd -o ./georef.fstd -n GRID -e L2O -v DEBUG)
        add_test(NAME GridInterp_L2M   COMMAND $<TARGET_FILE:georef_interp>  -g $ENV{ECCI_DATA_DIR}/georef/grids/M.fstd -i $ENV{ECCI_DATA_DIR}/georef/grids/L.fstd -o ./georef.fstd -n GRID -e L2M -v DEBUG)

        add_test(NAME GridInterp_LZE2PS  COMMAND $<TARGET_FILE:georef_interp>  -g $ENV{ECCI_DATA_DIR}/georef/grids/PS.fstd -i $ENV{ECCI_DATA_DIR}/georef/grids/HRDPS.fstd -o ./georef.fstd -n TT -e LZE2PS -v DEBUG)
        add_test(NAME GridInterp_LZE2PSN COMMAND $<TARGET_FILE:georef_interp>  -g $ENV{ECCI_DATA_DIR}/georef/grids/PSN.fstd -i $ENV{ECCI_DATA_DIR}/georef/grids/HRDPS.fstd -o ./georef.fstd -n TT -e LZE2PSN -v DEBUG)
        add_test(NAME GridInterp_LZE2PSS COMMAND $<TARGET_FILE:georef_interp>  -g $ENV{ECCI_DATA_DIR}/georef/grids/PSS.fstd -i $ENV{ECCI_DATA_DIR}/georef/grids/HRDPS.fstd -o ./georef.fstd -n TT -e LZE2PSS -v DEBUG)
        add_test(NAME GridInterp_LZE2ZE  COMMAND $<TARGET_FILE:georef_interp>  -g $ENV{ECCI_DATA_DIR}/georef/grids/ZE.fstd -i $ENV{ECCI_DATA_DIR}/georef/grids/HRDPS.fstd -o ./georef.fstd -n TT -e LZE2ZE -v DEBUG)
        add_test(NAME GridInterp_LZE2ZL  COMMAND $<TARGET_FILE:georef_interp>  -g $ENV{ECCI_DATA_DIR}/georef/grids/ZL.fstd -i $ENV{ECCI_DATA_DIR}/georef/grids/HRDPS.fstd -o ./georef.fstd -n TT -e LZE2ZL -v DEBUG)
        add_test(NAME GridInterp_LZE2O   COMMAND $<TARGET_FILE:georef_interp>  -g $ENV{ECCI_DATA_DIR}/georef/grids/O.fstd -i $ENV{ECCI_DATA_DIR}/georef/grids/HRDPS.fstd -o ./georef.fstd -n TT -e LZE2O -v DEBUG)
        add_test(NAME GridInterp_LZE2M   COMMAND $<TARGET_FILE:georef_interp>  -g $ENV{ECCI_DATA_DIR}/georef/grids/M.fstd -i $ENV{ECCI_DATA_DIR}/georef/grids/HRDPS.fstd -o ./georef.fstd -n TT -e LZE2M -v DEBUG)

        add_test(NAME GridInterp_O2ZE   COMMAND $<TARGET_FILE:georef_interp>  -g $ENV{ECCI_DATA_DIR}/georef/grids/ZE.fstd -i $ENV{ECCI_DATA_DIR}/georef/grids/O.fstd -o ./georef.fstd -n GRID -e O2ZE -v DEBUG)
        add_test(NAME GridInterp_LZE2U  COMMAND $<TARGET_FILE:georef_interp>  -g $ENV{ECCI_DATA_DIR}/georef/grids/U.fstd -i $ENV{ECCI_DATA_DIR}/georef/grids/HRDPS.fstd -o ./georef.fstd -n TT -e LZE2U -v DEBUG)
        add_test(NAME GridInterp_O2U    COMMAND $<TARGET_FILE:georef_interp>  -g $ENV{ECCI_DATA_DIR}/georef/grids/U.fstd -i $ENV{ECCI_DATA_DIR}/georef/grids/O.fstd -o ./georef.fstd -n GRID -e O2U -v DEBUG)
        add_test(NAME GridInterp_U2ZE   COMMAND $<TARGET_FILE:georef_interp>  -g $ENV{ECCI_DATA_DIR}/georef/grids/ZE.fstd -i $ENV{ECCI_DATA_DIR}/georef/grids/U.fstd -o ./georef.fstd -n GRID -e U2ZE -v DEBUG)
        add_test(NAME GridInterp_U2O    COMMAND $<TARGET_FILE:georef_interp>  -g $ENV{ECCI_DATA_DIR}/georef/grids/O.fstd -i $ENV{ECCI_DATA_DIR}/georef/grids/U.fstd -o ./georef.fstd -n GRID -e U2O -v DEBUG)

        if(GDAL_FOUND)
            add_test(NAME GridInterp_ZW2L  COMMAND $<TARGET_FILE:georef_interp>  -i $ENV{ECCI_DATA_DIR}/georef/grids/ZW.fstd -g $ENV{ECCI_DATA_DIR}/georef/grids/L.fstd -o ./georef.fstd -n GRID -e ZW2L -v DEBUG)
            add_test(NAME GridInterp_L2ZW  COMMAND $<TARGET_FILE:georef_interp>  -g $ENV{ECCI_DATA_DIR}/georef/grids/ZW.fstd -i $ENV{ECCI_DATA_DIR}/georef/grids/L.fstd -o ./georef.fstd -n GRID -e L2ZW -v DEBUG)
            add_test(NAME GridInterp_LZE2ZW  COMMAND $<TARGET_FILE:georef_interp>  -g $ENV{ECCI_DATA_DIR}/georef/grids/ZW.fstd -i $ENV{ECCI_DATA_DIR}/georef/grids/HRDPS.fstd -o ./georef.fstd -n TT -e LZE2ZW -v DEBUG)
        endif()

    endif()
endif()
